@@ -1,3 +1,7 @@
+2009-06-28 Matthias Trute <mtrute@users.sourceforge.net>
+	* loconet.c: improved loconet communication, internal code 
+	cleanups
+
 2009-06-24 Guido Scholz <guido.scholz@bayernline.de>
 	* clientservice.c, srcp-server.h, srcpd.c: Improved server
 	message string handling.
